# c107

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
AutoEncoder/: ae_visualize_test.py  anomaly_scores.csv  split_dataset.py  train_ae.py
AutoEncoder/models/: cabbage_autoencoder.pt
preprocess/: crop_image.py
yolo/: cabbage.yaml  yolo_train.py
